--- a/asset/style.css
+++ b/asset/style.css
@@ -27,6 +27,9 @@ font-weight: bold;
    background-color: #061539;
    color: white;
 }
+/* #Table > tbody tr:nth-child(2n+1){
+    background-color: #dbdbdb ; 
+ } */
  #Table > tbody tr:nth-child(odd) td:nth-child(odd) {
 	background: #dbdbdb;
 }
@@ -39,6 +42,10 @@ font-weight: bold;
 #Table > tbody tr:nth-child(even) td:nth-child(even) {
 	background: #f3f3f3;
 }
+
+ #Table > tbody tr:nth-child(even) td:nth-child(even) {
+	background: #f3f3f3;
+} 
 #Table > tfoot tr:nth-child(odd) td:nth-child(odd) {
 	background: #dbdbdb;
 }
