--- a/asset/style.css
+++ b/asset/style.css
@@ -1,10 +1,12 @@
 #Table{
-    border: solid 1px black;
+    /* border: solid 1px black; */
     border-collapse: collapse;
     text-align: center;
+    margin: auto;
 }
 #Table td{
-    border: solid 1px black;
+    /* border: solid 1px black; */
+    padding: 5px 10px;
 }
 #Table > thead td:first-child{
 background-color: #7887ab;
@@ -51,4 +53,16 @@ font-weight: bold;
 }
 #Table > tfoot tr:nth-child(odd) td:nth-child(even) {
 	background: #e7e7e7;
+}
+.left{
+  text-align: left;
+}
+#Table > tfoot button{
+  background-color: #dbdbdb;
+  width: 70px;
+  height: 25px;
+}
+.size{
+  font-size: 30px;
+  font-weight: bold;
 }
